test/fail/integration/_fail_sem_expr_mod_1.hs
x :: Int
x = "hello" mod 4
main = print "hello"